cmake_minimum_required(VERSION 3.15)
project(CPlusPlusClassesAndObjects2)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPlusPlusClassesAndObjects2 src/sources/main.cpp src/sources/Student.cpp)


add_executable(Student src/sources/Student.cpp)
add_executable(main src/sources/main.cpp)
add_executable( .gitignore)